# copilot-chat-exporter

./: .gitignore  README.md  main.py  pyproject.toml  test_exporter.py
copilot_chat_exporter/: __init__.py  config.py
copilot_chat_exporter/cli/: __init__.py  main.py  quick_export.py  workspace_finder.py
copilot_chat_exporter/core/: __init__.py  exporter.py  models.py
copilot_chat_exporter/utils/: __init__.py  workspace_finder.py
docs/: ORGANIZATION_SUMMARY.md  STRUCTURE.md
tests/: __init__.py  test_exporter.py
